[gd_scene load_steps=3 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ConnectCont" type="VBoxContainer" parent="Panel/CenterContainer"]
visible = false
margin_left = 362.0
margin_top = 262.0
margin_right = 662.0
margin_bottom = 338.0
rect_min_size = Vector2( 300, 0 )

[node name="GridContainer" type="GridContainer" parent="Panel/CenterContainer/ConnectCont"]
margin_right = 300.0
margin_bottom = 52.0
columns = 2

[node name="IPLabel" type="Label" parent="Panel/CenterContainer/ConnectCont/GridContainer"]
margin_top = 5.0
margin_right = 34.0
margin_bottom = 19.0
text = "IP"

[node name="IPInput" type="LineEdit" parent="Panel/CenterContainer/ConnectCont/GridContainer"]
margin_left = 38.0
margin_right = 300.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "localhost"
align = 2
placeholder_text = "localhost"

[node name="PLabel" type="Label" parent="Panel/CenterContainer/ConnectCont/GridContainer"]
margin_top = 33.0
margin_right = 34.0
margin_bottom = 47.0
text = "PORT"

[node name="PInput" type="LineEdit" parent="Panel/CenterContainer/ConnectCont/GridContainer"]
margin_left = 38.0
margin_top = 28.0
margin_right = 300.0
margin_bottom = 52.0
text = "25565"
align = 2
placeholder_text = "25565"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/CenterContainer/ConnectCont"]
margin_top = 56.0
margin_right = 300.0
margin_bottom = 76.0

[node name="ConnectBTN" type="Button" parent="Panel/CenterContainer/ConnectCont/HBoxContainer"]
margin_right = 148.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Connect"

[node name="HostBTN" type="Button" parent="Panel/CenterContainer/ConnectCont/HBoxContainer"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "HOST"

[node name="MainCont" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 412.0
margin_top = 179.0
margin_right = 612.0
margin_bottom = 421.0

[node name="Image" type="TextureRect" parent="Panel/CenterContainer/MainCont"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/CenterContainer/MainCont"]
margin_top = 204.0
margin_right = 200.0
margin_bottom = 224.0

[node name="SelectImageBTN" type="Button" parent="Panel/CenterContainer/MainCont/HBoxContainer"]
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Select Image"

[node name="SendBTN" type="Button" parent="Panel/CenterContainer/MainCont/HBoxContainer"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Send"

[node name="IMGPath" type="Label" parent="Panel/CenterContainer/MainCont"]
margin_top = 228.0
margin_right = 200.0
margin_bottom = 242.0
text = "IMG PATH"
clip_text = true

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 315.0
margin_bottom = 130.0
rect_min_size = Vector2( 500, 300 )
popup_exclusive = true
window_title = "Open Image"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.png ; PNG Images" )

[node name="ImageAcceptDialog" type="WindowDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
rect_min_size = Vector2( 300, 100 )
popup_exclusive = true

[node name="MarginContainer" type="CenterContainer" parent="ImageAcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ImageAcceptDialog/MarginContainer"]
margin_left = 70.0
margin_top = 14.0
margin_right = 230.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="ImageAcceptDialog/MarginContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 48.0
text = "
Accept image from peer?
"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ImageAcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 160.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CancelBTN" type="Button" parent="ImageAcceptDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 78.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Nope"

[node name="OKBTN" type="Button" parent="ImageAcceptDialog/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 160.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "OK"

[connection signal="pressed" from="Panel/CenterContainer/ConnectCont/HBoxContainer/ConnectBTN" to="." method="_on_ConnectBTN_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/ConnectCont/HBoxContainer/HostBTN" to="." method="_on_HostBTN_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/MainCont/HBoxContainer/SelectImageBTN" to="." method="_on_SelectImageBTN_pressed"]
[connection signal="pressed" from="Panel/CenterContainer/MainCont/HBoxContainer/SendBTN" to="." method="_on_SendBTN_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="ImageAcceptDialog/MarginContainer/VBoxContainer/HBoxContainer/CancelBTN" to="." method="_on_IA_Dialog_CancelBTN_pressed"]
[connection signal="pressed" from="ImageAcceptDialog/MarginContainer/VBoxContainer/HBoxContainer/OKBTN" to="." method="_on_IA_Dialog_OKBTN_pressed"]
